--- a/src/views/home.handlebars
+++ b/src/views/home.handlebars
@@ -34,12 +34,7 @@
               stock:
               {{stock}}
             </small></p>
-          <button
-            id="${
-          producto.id
-        }"
-            class="btn btn-success"
-          >Add</button>
+          <button id=`btnAdd-{{id}}` class="btn btn-success">Add</button>
         </div>
       </div>
 
@@ -47,3 +42,5 @@
 
   </article>
 </main>
+<script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+<script src="/js/home.js"></script>
