--- a/src/public/css/styles.css
+++ b/src/public/css/styles.css
@@ -1,3 +1,4 @@
+/* home */
 nav {
   display: flex;
   flex-direction: column;
@@ -57,6 +58,7 @@ h1 {
   box-shadow: 0 0 2px rgba(0, 0, 0, 0.5);
 }
 
+/* real time products */
 table {
   width: auto;
   background-color: #212e36;
@@ -71,4 +73,65 @@ td {
   padding: 10px;
   width: 100px;
   border: 1px solid whitesmoke;
+}
+
+/* chat */
+#messages {
+  display: flex;
+  flex-direction: column;
+  height: 500;
+  overflow-y: scroll;
+  padding: 15px;
+}
+.msg {
+  display: flex;
+  width: 100%;
+  flex-direction: column;
+}
+.me {
+  display: flex;
+  width: 100%;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-end;
+}
+.me p {
+  background-color: #005c4b;
+}
+.others p {
+  background-color: #353535;
+}
+
+.mainChat {
+  width: 100%;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #192229;
+}
+input {
+  border-radius: 10px;
+  padding: 5px;
+}
+.sectionChat {
+  background-color: #212e36;
+  width: 500px;
+  display: flex;
+  flex-direction: column;
+  padding: 20px;
+  gap: 20px;
+  border-radius: 10px;
+  height: 500px;
+}
+
+.msg strong,
+p {
+  margin-left: 10px;
+  color: aliceblue;
+}
+.msg p {
+  border-radius: 10px;
+  width: max-content;
+  padding: 5px;
 }
