--- a/src/views/home.handlebars
+++ b/src/views/home.handlebars
@@ -1,6 +1,6 @@
 <header>
   <nav>
-    <h1>Desafio Websockets + Handlebars</h1>
+    <h1>Desafio</h1>
     <ul>
       <li>
         <a href="/">Home</a>
