--- a/src/public/css/styles.css
+++ b/src/public/css/styles.css
@@ -118,7 +118,7 @@ input {
   background-color: #212e36;
   width: 500px;
   display: flex;
-  flex-direction: column;
+  flex-direction: column-reverse;
   padding: 20px;
   gap: 20px;
   border-radius: 10px;
