--- a/src/views/carts.handlebars
+++ b/src/views/carts.handlebars
@@ -15,26 +15,26 @@
 <main>
   <article id="products">
 
-    {{#each products}}
+    {{#each cart}}
       <div class="card cardEcommerce" style="width: 370px;height: 600px">
         <img
           src="
       "
           class="card-img-top style="
           height="300rem"
-          alt={{description}}
+          alt={{product.description}}
         />
         <div class="card-body">
-          <p class="card-title fw-bold fs-5">{{title}}</p>
+          <p class="card-title fw-bold fs-5">{{product.title}}</p>
           <p class="card-text"><small class="text-body-secondary">
-              {{description}}
+              {{product.description}}
             </small></p>
-          <p class="card-text precio fw-bold">${{price}}</p>
+          <p class="card-text precio fw-bold">${{product.price}}</p>
           <p class="card-text"><small class="text-body-secondary">
-              stock:
-              {{stock}}
+              quantity:
+              {{quantity}}
             </small></p>
-          <button id=`btnAdd-{{id}}` class="btn btn-success">Add</button>
+
         </div>
       </div>
 
