--- a/src/public/css/styles.css
+++ b/src/public/css/styles.css
@@ -136,3 +136,35 @@ input {
   padding: 5px;
   color: aliceblue;
 }
+
+.mainProducts {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.pagination {
+  padding: 20px;
+  margin-top: 20px;
+  text-align: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.pagination strong {
+  font-size: 20px;
+}
+.pagination button {
+  color: #007bff;
+  text-decoration: none;
+  padding: 8px 16px;
+  border: 1px solid #007bff;
+  border-radius: 4px;
+  margin: 0 5px;
+}
+
+.pagination button:hover {
+  background-color: #007bff;
+  color: white;
+}
