--- a/src/views/home.handlebars
+++ b/src/views/home.handlebars
@@ -3,7 +3,7 @@
     <h1>Desafio</h1>
     <ul>
       <li>
-        <a href="/">Home</a>
+        <a href="/products">Home</a>
       </li>
       <li>
         <a href="/realTimeProducts">Real Time Products</a>
