--- a/src/views/carts.handlebars
+++ b/src/views/carts.handlebars
@@ -1,17 +1,4 @@
-<header>
-  <nav>
-    <h1>Desafio</h1>
-    <ul>
-      <li>
-        <a href="/products">Home</a>
-      </li>
-      <li>
-        <a href="/realTimeProducts">Real Time Products</a>
-      </li>
-    </ul>
-  </nav>
-  <hr />
-</header>
+{{>navbar}}
 <main>
   <article id="products">
 
