--- a/src/views/home.handlebars
+++ b/src/views/home.handlebars
@@ -1,21 +1,4 @@
-<header>
-  <nav>
-    <h1>Desafio</h1>
-    <ul>
-      <li>
-        <a href="/products">Home</a>
-      </li>
-      <li>
-        <a href="/realTimeProducts">Real Time Products</a>
-      </li>
-      <li>
-
-      <a href="/carts/6633a148908d0e9e27814a8a"><button class="btn btn-primary" type="button"><i class="fa-solid fa-cart-shopping"></i></button></a>
-      </li>
-    </ul>
-  </nav>
-  <hr />
-</header>
+{{>navbar}}
 <main class="mainProducts">
   <article id="products">
 
