--- a/src/views/partials/navbar.handlebars
+++ b/src/views/partials/navbar.handlebars
@@ -2,7 +2,7 @@
   <nav>
     <h1>Desafio</h1>
     <div class="userContainer">
-      <h2>Bienvenido {{user.name}}</h2>
+      <h2>Welcome {{user.name}}!</h2>
       <a href="/profile"><i class="fa-solid fa-user"></i></a>
       <button class="btn btn-primary" onclick="logout()"><i
           class="fa-solid fa-door-open"
