--- a/src/views/login.handlebars
+++ b/src/views/login.handlebars
@@ -1,15 +1,3 @@
-{{!-- <h2>Login:</h2>
-<hr />
-<form action="/api/sessions/login" method="post">
-  <div style="font-weight: bolder; color: red;">{{error.error}}</div>
-  <input type="email" name="email" placeholder="correo electrónico" />
-  <input type="password" name="password" placeholder="contraseña" />
-  <input type="text" name="web" value="web" hidden />
-  <br /><br />
-  <input type="submit" value="Login" />
-</form>
-<br /><br /> --}}
-
 <div class="login-container">
   <div class="login-form">
     <h2 class="login-title">Login</h2>
@@ -38,6 +26,12 @@
         <button type="submit" class="btn btn-primary btn-block">Login</button>
       </div>
     </form>
+    <div class="github-login">
+      <a href="/auth/github" class="btn btn-dark btn-block">
+        <i class="fab fa-github"></i>
+        Login with GitHub
+      </a>
+    </div>
     <div class="register-link">
       Not registered yet?
       <a href="/register">Register</a>
