--- a/src/views/login.handlebars
+++ b/src/views/login.handlebars
@@ -23,11 +23,14 @@
       </div>
       <input type="text" name="web" value="web" hidden />
       <div class="mb-3">
-        <button type="submit" class="btn btn-primary btn-block">Login</button>
+        <button
+          type="submit"
+          class="btn btn-primary btn-block login-btn"
+        >Login</button>
       </div>
     </form>
     <div class="github-login">
-      <a href="/auth/github" class="btn btn-dark btn-block">
+      <a href="/api/sessions/github" class="github-link">
         <i class="fab fa-github"></i>
         Login with GitHub
       </a>
