--- a/src/views/register.handlebars
+++ b/src/views/register.handlebars
@@ -33,7 +33,7 @@
       <div class="mb-3">
         <button
           type="submit"
-          class="btn btn-primary btn-block"
+          class="btn btn-primary btn-block login-btn"
         >Register</button>
       </div>
     </form>
