--- a/src/views/home.handlebars
+++ b/src/views/home.handlebars
@@ -1,12 +1,11 @@
 {{>navbar}}
 <main class="mainProducts">
   <article id="products">
-
+<input type="text" value="{{user.cart}}" id="cart" hidden>
     {{#each products}}
       <div class="card cardEcommerce" style="width: 370px;height: 600px">
         <img
-          src="
-      "
+          src=""
           class="card-img-top style="
           height="300rem"
           alt={{description}}
