--- a/src/views/partials/navbar.handlebars
+++ b/src/views/partials/navbar.handlebars
@@ -17,7 +17,7 @@
       </li>
       <li>
 
-        <a href="/carts/6633a148908d0e9e27814a8a"><button
+        <a href="/carts/{{cart._id}}"><button
             class="btn btn-primary"
             type="button"
           ><i class="fa-solid fa-cart-shopping"></i></button></a>
