--- a/src/public/css/styles.css
+++ b/src/public/css/styles.css
@@ -311,3 +311,90 @@ input {
 .logout-btn {
   margin-top: 20px;
 }
+
+/* CARD */
+.cardCart {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+}
+
+.colCart {
+  align-items: center;
+  align-content: center;
+}
+
+.imgCart {
+  box-shadow: 0 0 5px rgba(0, 0, 0, 0.5);
+  width: 100%;
+  height: 100%;
+}
+
+.cardCarrito {
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+  display: flex;
+}
+
+.btnEliminar {
+  display: flex;
+  justify-content: right;
+  margin-top: 10px; /* Ajuste para separar el botón del contenido */
+}
+
+.btn-danger {
+  height: 40px;
+}
+
+.precio {
+  font-family: "Noto Sans JP", sans-serif;
+}
+
+.row {
+  height: 100%;
+}
+
+.resumenPedido {
+  width: 100%;
+  height: 90%;
+  margin-left: 10px;
+  margin-top: 20px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+}
+#mainCarrito {
+  background-color: aliceblue;
+  margin-top: 15px;
+  display: flex;
+  width: 100%;
+  height: 100vh;
+}
+#btnf {
+  width: 200px;
+  height: 60px;
+  margin-bottom: 20px;
+  margin-top: 20px;
+}
+
+#cards {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  height: auto;
+}
+
+.cardsContainer {
+  width: 100%;
+  height: 840px;
+  background-color: #e8e8e8;
+  overflow-y: auto;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+  margin-top: 10px;
+  margin-left: 10px;
+}
