--- a/src/views/register.handlebars
+++ b/src/views/register.handlebars
@@ -6,8 +6,17 @@
         <input
           type="text"
           class="form-control"
-          name="name"
-          placeholder="Name"
+          name="first_name"
+          placeholder="First Name"
+          required
+        />
+      </div>
+      <div class="mb-3">
+        <input
+          type="text"
+          class="form-control"
+          name="last_name"
+          placeholder="Last Name"
           required
         />
       </div>
@@ -17,6 +26,15 @@
           class="form-control"
           name="email"
           placeholder="Email"
+          required
+        />
+      </div>
+      <div class="mb-3">
+        <input
+          type="text"
+          class="form-control"
+          name="age"
+          placeholder="Age"
           required
         />
       </div>
