--- a/src/views/realTimeProducts.handlebars
+++ b/src/views/realTimeProducts.handlebars
@@ -1,17 +1,17 @@
 {{>navbar}}
 <main>
-  <div>
-    <table>
+  <div class="table-responsive">
+    <table class="table table-striped">
       <thead>
         <tr>
-          <th class="encabezado">Title</th>
-          <th class="encabezado">Description</th>
-          <th class="encabezado">Code</th>
-          <th class="encabezado">Price</th>
-          <th class="encabezado">Status</th>
-          <th class="encabezado">Stock</th>
-          <th class="encabezado">Category</th>
-          <th class="encabezado">Thumbnails</th>
+          <th>Title</th>
+          <th>Description</th>
+          <th>Code</th>
+          <th>Price</th>
+          <th>Status</th>
+          <th>Stock</th>
+          <th>Category</th>
+          <th>Thumbnails</th>
         </tr>
       </thead>
       <tbody id="productsContainer">
@@ -20,7 +20,7 @@
             <td>{{title}}</td>
             <td>{{description}}</td>
             <td>{{code}}</td>
-            <td>{{price}}</td>
+            <td>${{price}}</td>
             <td>{{status}}</td>
             <td>{{stock}}</td>
             <td>{{category}}</td>
@@ -31,7 +31,6 @@
     </table>
   </div>
 </main>
-
 <script src="/socket.io/socket.io.js"></script>
 <script src="/js/main.js"></script>
 <script src="/js/cart.js"></script>
