--- a/src/views/home.handlebars
+++ b/src/views/home.handlebars
@@ -23,7 +23,6 @@
           <button id=`btnAdd-{{code}}` class="btn btn-success" onclick="addToCart('{{_id}}')">Add</button>
         </div>
       </div>
-
     {{/each}}
     
   </article>
@@ -33,18 +32,13 @@
         {{else}}
         <button disabled>Ant</button>
     {{/if}}
-
-      <strong> pagina:{{page}}</strong>
-
+        <p>Pagina:<strong>{{page}}</strong></p>
     {{#if hasNextPage}}
         <a href={{nextLink}}><button>Sig</button></a>
         {{else}}
         <button disabled class="disabled">Sig</button>
     {{/if}}
-
 </div>
-
-
 </main>
 <script  type="text/javascript"src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
 <script src="/js/cart.js"></script>
