--- a/src/public/css/styles.css
+++ b/src/public/css/styles.css
@@ -75,6 +75,17 @@
   box-shadow: 0 0 2px rgba(0, 0, 0, 0.5);
 }
 
+.disabled:disabled {
+  background-color: #cccccc;
+  color: #666666;
+  cursor: not-allowed;
+  opacity: 0.6;
+  border: none;
+}
+.disabled:hover {
+  background-color: #cccccc;
+}
+
 /* real time products */
 table {
   width: 100%;
