--- a/src/views/partials/navbar.handlebars
+++ b/src/views/partials/navbar.handlebars
@@ -22,10 +22,12 @@
         <a class="nav-link" href="/profile">
           <i class="fa-solid fa-user"></i>
         </a>
-        <button class="btn btn-primary" onclick="logout()">
-          <i class="fa-solid fa-door-open"></i>
-          Logout
-        </button>
+        <a href="/api/sessions/logout">
+          <button class="btn btn-primary">
+            <i class="fa-solid fa-door-open"></i>
+            Logout
+          </button>
+        </a>
       </div>
     </div>
   </nav>
