--- a/src/views/layouts/main.handlebars
+++ b/src/views/layouts/main.handlebars
@@ -28,7 +28,7 @@
       href="/css/styles.css
     "
     />
-    <title>Desafio-Victor Molina</title>
+    <title>Desafios Backend</title>
   </head>
   <body>
     {{{body}}}
