--- a/src/public/css/styles.css
+++ b/src/public/css/styles.css
@@ -338,7 +338,7 @@ input {
 
 /* CART */
 #mainCarrito {
-  background-color: aliceblue;
+  background-color:#63bba0 ;
   display: flex;
   flex-direction: row;
   align-items: center;
@@ -349,7 +349,7 @@ input {
 
 .cardsContainer {
   width: 100%;
-  background-color: #e8e8e8;
+  background-color: #a7d4c6;
   overflow-y: auto;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
   margin-top: 10px;
