--- a/src/views/home.handlebars
+++ b/src/views/home.handlebars
@@ -1,4 +1,6 @@
 {{>navbar}}
+<img src="" style="">
+<img src="" alt="" style="width: 50%;">
 <main class="mainProducts">
   <article id="products">
 <input type="text" value="{{user.cart}}" id="cart" hidden>
