--- a/src/views/profile.handlebars
+++ b/src/views/profile.handlebars
@@ -24,6 +24,12 @@
         class="btn btn-danger logout-btn"
       >Logout</a>
     </div>
+    <div class="profile-action text-center">
+      <a
+        href="/request-password-reset"
+        class="btn btn-warning"
+      >Change Password</a>
+    </div>
   </div>
 </div>
 <script src="/js/cart.js"></script>
